# cuda_blackboard

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  cancel-previous-workflows.yaml  cppcheck-differential.yaml  cppcheck-weekly.yaml  pre-commit-optional.yaml  pre-commit.yaml  spell-check-differential.yaml  spell-check-partial.yaml  sync-files.yaml
include/cuda_blackboard/: cuda_adaptation.hpp  cuda_blackboard.hpp  cuda_blackboard_publisher.hpp  cuda_blackboard_subscriber.hpp  cuda_error.hpp  cuda_image.hpp  cuda_mem_pool_context.hpp  cuda_pointcloud2.hpp  cuda_unique_ptr.hpp
launch/: example.launch.py
src/: cuda_blackboard.cpp  cuda_blackboard_publisher.cpp  cuda_blackboard_publisher_node.cpp  cuda_blackboard_subscriber.cpp  cuda_blackboard_subscriber_node.cpp  cuda_blackboard_subscriber_node_with_stream.cu  cuda_image.cpp  cuda_mem_pool_context.cpp  cuda_message_impl_detail.cpp  cuda_message_impl_detail.hpp  cuda_pointcloud2.cpp
test/: cuda_test_utils.hpp  fixtures.hpp  test_cuda_blackboard.cpp  test_cuda_blackboard_pubsub.cpp  test_cuda_error.cpp  test_cuda_image.cpp  test_cuda_pointcloud2.cpp  test_cuda_unique_ptr.cpp
